--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,18 @@
-<!DOCTYPE>
-<meta charset="utf-8">
-<style type="text/css">
-  path.place {
-    fill: white;
-    stroke: black;
-  }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <div class="nav">
+    <h1>Thomas Leu</h1>
+    <h1>Assignment 8</h1>
+    <ul>
+      <li class="home"><a class="active" href="">Home</a></li>
+      <li class="prob"><a href="#">Maps</a></li>
+    </ul>
+  </div>
+</head>
+
 
 <body>
   <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
@@ -46,3 +53,16 @@
     }); 
   </script>
 </body>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>CSCIE 63 Assignment 8</title>
+</head>
+<body>
+  <header>
+
+  </header>
+</body>
+</html>
