--- a/site/index.html
+++ b/site/index.html
@@ -19,11 +19,14 @@
   <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
   <script type="text/javascript" src="http://d3js.org/topojson.v1.min.js"></script>
   <script type="text/javascript" src="javascript/mapper.js"></script>
-  <div class="container" id="data"></div>
+  <div class="container" id="data">
+    <div class="container" id="map-container"></div>
+    <div class="container" id="cities-container"><ol id="cities-list">Top Cities</ol></div>
+  </div>
   <script type="text/javascript">
     //mapper.drawWorld();
-    mapper.drawUSA();
-    //mapper.drawChina();
+    //mapper.drawUSA();
+    mapper.drawChina();
   </script>
 </body>
 </html>
