--- a/site/index.html
+++ b/site/index.html
@@ -8,25 +8,13 @@
     <h1>Thomas Leu</h1>
     <h1>Final Assignment</h1>
     <ul>
-      <li class="home"><a class="active" href="">Home</a></li>
-      <li class="prob"><a href="#">Maps</a></li>
+      <li class="home"><a class="active" href="index.html">Home</a></li>
+      <li class="prob"><a href="world.html">Maps</a></li>
+      <li class="youtube"><a href="#">Videos</a></li>
     </ul>
   </div>
 </head>
 
-
 <body>
-  <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
-  <script type="text/javascript" src="http://d3js.org/topojson.v1.min.js"></script>
-  <script type="text/javascript" src="javascript/mapper.js"></script>
-  <div class="container" id="data">
-    <div class="container" id="map-container"></div>
-    <div class="container" id="cities-container"><ol id="cities-list">Top Cities</ol></div>
-  </div>
-  <script type="text/javascript">
-    //mapper.drawWorld();
-    //mapper.drawUSA();
-    mapper.drawChina();
-  </script>
 </body>
 </html>
